--- a/FORMELSAMMLUNG.tex
+++ b/FORMELSAMMLUNG.tex
@@ -13,8 +13,12 @@
 \setlength{\parindent}{0in}
 \setlength{\mathindent}{0pt}
 
+\graphicspath {{./sections/}{./sections/08_Geometrie/}}
+
+
 
 \begin{document}
+
 
 \maketitle
 \thispagestyle{empty}
@@ -37,13 +41,17 @@
 %1 inch high (and wide):
 %\quad
 
+\begin{center}
 Wer keine Formeln schreibt, braucht sich damit nicht zu beschäftigen.
+\end{center}
 
-\qrcode[height=1in]{http://github.com/codirk/formelsamlung}
+% \centering{Wer keine Formeln schreibt, braucht sich damit nicht zu beschäftigen.}
 
 
-
+% this works with pdflatex but not with latex
 %\doclicenseThis
+
+
 
 
 \pagebreak
@@ -102,9 +110,14 @@ $\widehat{=}$ & entspricht  \\
 $\longrightarrow$ & daraus folgt \\
 $\sum$ & Summenzeichen \\
 $\prod$ & Produktzeichen \\
-$ \in$ & Element von \\
-$ |$ & mit der Bedingung \\
-$ \infty$ & Unendlich \\
+$\in$ & Element von \\
+$\notin$ & nicht Element von \\
+$|$ & mit der Bedingung \\
+$\land$ & und \\
+$\lor$ & oder \\
+$\lnot$ & nicht \\
+$\infty$ & Unendlich \\
+
 \end{tabular}
 
 
