--- a/sections/02_Arithmetik.tex
+++ b/sections/02_Arithmetik.tex
@@ -83,9 +83,19 @@ Division einer Summe:
 (a-b)^ 2 =  a^ 2 - 2ab + b^2 \\
 (a+b)(a-b) = a^ 2 - b^2
 \end{align*}
+
+$a^ 2 + b^2 $ (reell nicht zerlegbar!)
+
+
+\begin{align*}
+a^ 3 + b^3 = (a+b)( a^ 2 - ab + b^2) \\
+a^ 3 - b^3 = (a-b)( a^ 2 + ab + b^2)
+\end{align*}
+
+
  
 
-%\input{sections/02_Arithmetik_PascalschesDreieck.tex}
+\input{sections/02_Arithmetik_PascalschesDreieck.tex}
 
 
 \subsection{Potenzen}
