--- a/sections/08_Geometrie.tex
+++ b/sections/08_Geometrie.tex
@@ -28,6 +28,31 @@ Entsprechende Abschnitte auf den Parallelen stehen im gleichen Verhältnis.
 
 \subsubsection{Satz des Pythagoras}
 %TODO picture
+
+\begin{figure}[htb]
+\begin{center}
+%	\includegraphics[height=1in,width=1in,angle=-90]{./08_Geometrie/pythagoras.standalone}
+	\includegraphics[height=1in,width=1in,angle=-90]{pythagoras.standalone.eps}
+\caption{This is a figure.}
+\end{center}
+\end{figure}
+
+%\begin{figure}
+%    \centering
+%    \subfloat{
+%	\includegraphics[height=2in,width=2in,angle=-90]{sections/08_Geometrie/pythagoras.standalone.pdf}
+%   }\hfill
+%   \subfloat{
+%      \begin{minipage}[t]{120mm}
+%   	$A = \frac{d^2 \cdot \pi}{4}$ \\
+%	$U = d \cdot \pi  $
+%      \end{minipage}
+%    }
+%  \caption{Abbildungsname}
+%  \label{fig:decision-tree}
+%\end{figure}
+
+
 \begin{align*}
     a^2+b^2=c^2
 \end{align*}
@@ -39,27 +64,6 @@ Entsprechende Abschnitte auf den Parallelen stehen im gleichen Verhältnis.
 \end{align*}
 
 
-%\begin{figure}[htb]
-%\begin{center}
-%	\includegraphics[height=1in,width=1in,angle=-90]{sections/08_Geometrie/pythagoras.standalone.pdf}
-%\caption{This is a figure.}
-%\end{center}
-%\end{figure}
-
-%\begin{figure}
-%    \centering
-%    \subfloat{
-%	\includegraphics[height=2in,width=2in,angle=-90]{sections/08_Geometrie/pythagoras.standalone.pdf} 
-%   }\hfill
-%   \subfloat{
-%      \begin{minipage}[t]{120mm}
-%   	$A = \frac{d^2 \cdot \pi}{4}$ \\
-%	$U = d \cdot \pi  $
-%      \end{minipage}
-%    }
-%  \caption{Abbildungsname}
-%  \label{fig:decision-tree}
-%\end{figure}
 
 \subsubsection{Kathetensatz}
 %TODO picture
