--- a/sections/02_Arithmetik_PascalschesDreieck.tex
+++ b/sections/02_Arithmetik_PascalschesDreieck.tex
@@ -1,21 +1,5 @@
 
-$a^ 2 + b^2 $ (reell nicht zerlegbar!) 
 
-\begin{align*} 
-a^ 3 + b^3 = (a+b)( a^ 2 - ab + b^2) \\
-a^ 3 - b^3 = (a-b)( a^ 2 + ab + b^2)
-\end{align*}
-
-
-\begin{tabular}{>{$n=}l<{$\hspace{12pt}}*{14}{c}}
-0 &&&&&&&1&&&&&&& $(a+b)^ 0=1$\\
-1 &&&&&&1&&1&&&&&& $(a+b)^ 1=1a+1b$ \\
-2 &&&&&1&&2&&1&&&&&  $(a+b)^ 2=1a^ 2+2ab+1b^2$\\
-3 &&&&1&&3&&3&&1&&&& $(a+b)^ 3=1a^3+3a^2 b+3ab^2+1b^3$\\
-4 &&&1&&4&&6&&4&&1&&& $(a+b)^ 4=a^4+4a^3 b+6a^2b^2+4ab^3+b^4$\\
-5 &&1&&5&&10&&10&&5&&1&&\\
-6 &1&&6&&15&&20&&15&&6&&1&
-\end{tabular}
 
 Binominalkoeffizienten (n über k)
 \begin{align*}
@@ -26,5 +10,18 @@ Binominalkoeffizienten (n über k)
 \begin{align*}
 n! = 1\cdot2\cdot3...(n-1)n= \prod_{k = 1}^{n}k    (n \in \mathbb{N})
 \end{align*}
+
+
+Pascalsches Dreieck
+
+\begin{tabular}{>{$n=}l<{$\hspace{12pt}}*{14}{c}}
+0 &&&&&&&1&&&&&&& $(a+b)^ 0=1$\\
+1 &&&&&&1&&1&&&&&& $(a+b)^ 1=1a+1b$ \\
+2 &&&&&1&&2&&1&&&&&  $(a+b)^ 2=1a^ 2+2ab+1b^2$\\
+3 &&&&1&&3&&3&&1&&&& $(a+b)^ 3=1a^3+3a^2 b+3ab^2+1b^3$\\
+4 &&&1&&4&&6&&4&&1&&& $(a+b)^ 4=a^4+4a^3 b+6a^2b^2+4ab^3+b^4$\\
+5 &&1&&5&&10&&10&&5&&1&& ... \\
+6 &1&&6&&15&&20&&15&&6&&1&
+\end{tabular}
 
 
