--- a/sections/03_Algebra.tex
+++ b/sections/03_Algebra.tex
@@ -5,47 +5,26 @@ Assoziativgesetz: Verknüpfungsgesetz oder auch Verbindungsgesetz (Klammern vers
 Distributivgesetz: Verteilungsgesetze (Ausklammern/Ausmultiplizieren)
 
 
-\subsection{Teilbarkeitsregeln (natürliche Zahlen)}
-Ist a durch t ohne Rest teilbar?\\
-$t|a$ t teilt a 
-
-
-$t=2$ wenn die letzte Ziffer eine durch 2 teilbare Zahl darstellt\\
-$t=3$ wenn die Quersumme durch 3 teilbar ist\\
-$t=4$ wenn die letzten \textbf{zwei} Ziffern eine durch 4 teilbare Zahl bilden\\
-$t=5$ wenn die letzte Ziffer eine durch 5 teilbare Zahl darstellt\\
-$t=6$ wenn die Zahl durch 2 und 3 teilbar ist\\
-$t=7$ (Für die Zahl 7 gibt es keine einfache Teilbarkeitsregel!)\\
-$t=8$ wenn die letzten \textbf{drei} Ziffern eine durch 8 teilbare Zahl bilden\\
-$t=9$ wenn die Quersumme durch 9 teilbar ist\\
-$t=10$ wenn die letzte Ziffer eine 0 ist
-
-Komplexere Regeln \\
-$t=7$ wenn die alternierende 3er-Quersumme durch 7 teilbar ist\\
-$t=11$ wenn die alternierende Quersumme durch 11 teilbar ist\\
-$t=13$ wenn die alternierende 3er-Quersumme durch 11 teilbar ist
-
-
-\subsection{Quersummenregeln}
-\subsubsection{Quersumme}
-$Q(1234)=4+3+2+1=10$
-
-\subsubsection{Alternierende Quersumme}
-
-$Q^{\prime}(1234)=4-3+2-1=2$\\
-$Q^{\prime}(4321)=1-2+3-4=-1$\\
-$Q^{\prime}(3223)=3-2+2-3=0$\\
-$Q^{\prime}(68786979)=9+9+8+8-(7+6+7+6)=34-26=8$
 
 
 
 
+% \subsection{Ungleichungen}
 
-\subsection{Ungleichungen}
 \subsection{Gleichungen}
+Äquivalenzumformungen (T $\widehat{=}$ Term)
+\begin{align*}
+T_1 &= T_2 &\longrightarrow& & T_2 &= T_1 \\
+T_1 &= T_2 | \pm T_3 &\longrightarrow& & T_1 \pm T_3 &= T_2 \pm T_3 \\
+T_1 &= T_2 | \cdot a &\longrightarrow& & T_1 \cdot a &= T_2 \cdot a &a \in \{a|a \neq 0\} \\
+T_1 &= T_2 | : a &\longrightarrow& & \frac{T_2}{a} &= \frac{T_2}{a} &a \in \{a|a \neq 0\} \\
+\end{align*}
+
+
 \subsubsection{Linieare Gleichungen}
 \paragraph{Determinanten}
 \paragraph{Cramer'sche Regel}
+
 \subsection{Quadratische Gleichungen}
 Allgemeine Form:
 $ ax^2 + bx + c = 0 $
