--- a/sections/06_Differenzialrechnung.tex
+++ b/sections/06_Differenzialrechnung.tex
@@ -33,18 +33,18 @@
    y &= \cot{x}         &| &y^{\prime} = \frac{-1}{\sin^2{x}} \\
 \end{align*}
 
-Extrempunkte
+\paragraph{Extrempunkte}
 \begin{align*}
     y^{\prime}=0 &\land y^{\prime\prime} > 0  \Rightarrow  \textrm{Maximum} \\
     y^{\prime}=0 &\land y^{\prime\prime} < 0  \Rightarrow  \textrm{Minimum}
 \end{align*}
 
 
-Wendepunkte
+\paragraph{Wendepunkte}
 \begin{align*}
     y^{\prime\prime}=0 &\land y^{\prime\prime\prime} \ne 0 \land y^{\prime} \ne 0
 \end{align*}
-Sattelpunkt
+\paragraph{Sattelpunkt}
 \begin{align*}
     y^{\prime\prime}=0 &\land y^{\prime\prime\prime} \ne 0 \land y^{\prime} = 0
 \end{align*}
