--- a/sections/08_Geometrie.tex
+++ b/sections/08_Geometrie.tex
@@ -184,5 +184,53 @@ Entsprechende Abschnitte auf den Parallelen stehen im gleichen Verhältnis.
 \end{align*}
 
 \subsubsection{Winkelbeziehungen in den Quadranten}
+\paragraph{$90^\circ \leq \alpha \leq 90^\circ$}
+\begin{align*}
+\sin \alpha &= \sin{(180^\circ-\alpha)} \\ 
+\cos \alpha &= -\cos{(180^\circ-\alpha)} \\ 
+\tan \alpha &= -\tan{(180^\circ-\alpha)} \\ 
+\cot \alpha &= \cot{(180^\circ-\alpha)} \\ 
+\end{align*}
+
+\paragraph{$180^\circ \leq \alpha \leq 270^\circ$}
+\begin{align*}
+\sin \alpha &= -\sin{(\alpha-180^\circ)} \\ 
+\cos \alpha &= -\cos{(\alpha-180^\circ)} \\ 
+\tan \alpha &= \tan{(\alpha-180^\circ)} \\ 
+\cot \alpha &= \cot{(\alpha-180^\circ)} \\ 
+\end{align*}
+
+\paragraph{$270^\circ \leq \alpha \leq 360^\circ$}
+\begin{align*}
+\sin \alpha &= -\sin{(360^\circ-\alpha)} \\ 
+\cos \alpha &= \cos{(360^\circ-\alpha)} \\ 
+\tan \alpha &= -\tan{(360^\circ-\alpha)} \\ 
+\cot \alpha &= -\cot{(360^\circ-\alpha)} \\ 
+\end{align*}
+
+
+\subsubsection{Funktionen von Winkelsummen}
+
+\begin{align*}
+\sin{(\alpha \pm \beta)} &= \sin{\alpha} \cdot \cos{\beta} \pm \cos{\alpha}  \cdot \sin{\beta} \\
+\cos{(\alpha \pm \beta)} &= \cos{\alpha} \cdot \cos{\beta} \pm \sin{\alpha}  \cdot \sin{\beta} \\
+\tan{(\alpha \pm \beta)} &= \frac{\tan{\alpha} \pm \tan{\beta}}{1 \mp \tan{\alpha} \cdot \tan{\beta}} \\
+\cot{(\alpha \pm \beta)} &= \frac{\cot{\alpha} \cdot \cot{\beta} \pm 1}{\cot{\beta} \pm \cot{\alpha}} \\
+\end{align*}
+
+\subsubsection{Summe von Winkelsummen}
+\begin{align*}
+\sin{\alpha} + \sin{\beta}  &= 2 \cdot \sin{\frac{\alpha+\beta}{2}} \cdot \cos{\frac{\alpha-\beta}{2}} \\
+\sin{\alpha} - \sin{\beta}  &= 2 \cdot \cos{\frac{\alpha+\beta}{2}} \cdot \sin{\frac{\alpha-\beta}{2}} \\
+\end{align*}
+
+\subsubsection{Beziehung der doppelten Winkel}
+\begin{align*}
+\sin{ 2\alpha} &= 2 \sin{ \alpha} \cos{ \alpha} \\
+\cos{ 2\alpha} &= \cos^2{ \alpha} - \sin^2{ \alpha} \\
+\tan{ 2\alpha} &= \frac{2 \tan{\alpha}}{1-\tan^2{\alpha}} \\
+\cot{ 2\alpha} &= \frac{\cot^2{\alpha}-1}{ 2 \cot{\alpha}}
+\end{align*}
+
 
 
