some chapters deactivated

--- a/FORMELSAMMLUNG.tex
+++ b/FORMELSAMMLUNG.tex
@@ -84,9 +84,9 @@ Wer keine Formeln schreibt, braucht sich damit nicht zu beschäftigen.
 \input{sections/06_Differenzialrechnung.tex}
 \input{sections/07_Integralrechnung.tex}
 \input{sections/08_Geometrie.tex}
-\input{sections/09_Vectorrechung.tex}
-\input{sections/10_Matrixrechnung.tex}
-\input{sections/11_Stochastik.tex}
+%\input{sections/09_Vectorrechung.tex}
+%\input{sections/10_Matrixrechnung.tex}
+%\input{sections/11_Stochastik.tex}
 
 
 \section{Konstanten}
