--- a/formulaCollection.sty
+++ b/formulaCollection.sty
@@ -10,7 +10,7 @@
 
 \author{Dirk~Messetat}
 \date{\today}
-\newcommand{\versionsnummer}{0.7}
+\newcommand{\versionsnummer}{0.8-SNAPSHOT}
 
 % URL:
 \newcommand{\url}{}
