--- a/sections/03_Algebra.tex
+++ b/sections/03_Algebra.tex
@@ -75,7 +75,7 @@ x_2 &= \frac{ D_{{x}_2} }{D} \\
 
 
 \paragraph{m-Gleichungen mit n-Unbekannten}
-Die Cramer'sche Regel gild analog für m Gleichungen mit n Variablen.
+Die Cramer'sche Regel gilt analog für m Gleichungen mit n Variablen.
 \begin{align*}
 a_{11}x_{1}+a_{12}x_{2}+a_{13}x_{1}+...+a_{1n}x_{2}-c_{1}&=0 \\
 a_{21}x_{1}+a_{22}x_{2}+a_{23}x_{1}+...+a_{2n}x_{2}-c_{1}&=0 \\
