04_Relationen_und_Funktionen removed

--- a/FORMELSAMMLUNG.tex
+++ b/FORMELSAMMLUNG.tex
@@ -79,7 +79,7 @@ Wer keine Formeln schreibt, braucht sich damit nicht zu beschäftigen.
 \input{sections/02_Arithmetik.tex}
 \input{sections/03_Algebra.tex}
 \pagebreak
-\input{sections/04_Relationen_und_Funktionen.tex}
+%\input{sections/04_Relationen_und_Funktionen.tex}
 \input{sections/05_Folgen_und_Reihen.tex}
 \input{sections/06_Differenzialrechnung.tex}
 \input{sections/07_Integralrechnung.tex}
